fix: component docs code snippet overflow

--- a/src/components/CodeExample/code-example.scss
+++ b/src/components/CodeExample/code-example.scss
@@ -74,7 +74,6 @@
   flex-direction: column;
   justify-content: space-between;
   overflow-y: hidden;
-  overflow-x: scroll;
   scrollbar-width: none;
   transition: $transition--base;
   border-bottom: 1px solid $carbon--gray-80;
